--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ pre code {
 
 .exercise {
     padding-left: 2em;
+    padding-right: 2em;
     border: 1px solid;
     border-color: #ffffff;
     /* color: #ffffff; white*/
@@ -27,6 +28,7 @@ pre code {
 
 .history {
   padding-left: 2em;
+  padding-right: 2em;
   border: 1px solid;
   border-color: #ffffff;
   color: #696969;
@@ -37,6 +39,7 @@ pre code {
 
 .question{
   padding-left: 2em;
+  padding-right: 2em;
   border: 1px solid;
   border-color: #ffffff;
   color: #696969;
@@ -45,6 +48,7 @@ pre code {
 
 .demo{
   padding-left: 2em;
+  padding-right: 2em;
   border: 1px solid;
   border-color: #ffffff;
   color: #696969;
@@ -72,34 +76,3 @@ pre code {
   color: inherit;
 }
 
-/* -----------Section anchors -------------*/
-
-.book .book-body .page-wrapper .page-inner section.normal {
-  overflow: visible !important; /*so anchor link doesnt get cut off */
-}
-
-a.anchor {
-  margin-left: -30px;
-  padding-right: 3px;
-  display:inline-block;
-  width: 30px;
-  height: 30px;
-  background-image: url(https://image.flaticon.com/icons/svg/34/34735.svg) !important;
-  background-repeat: no-repeat !important;
-  background-size: 20px 20px !important;
-  background-position: center bottom !important;
-  opacity: 0;
-}
-
-
-.hasAnchor:hover a.anchor, a.anchor:hover {
-  opacity: 0.6;
-}
-
-@media (max-width: 1144px) { /* dont show anchor link on small screens */
-  .hasAnchor:hover a.anchor {
-visibility: hidden;
-  }
-}
-
-/* ----------- End Section anchors -------------*/
